peri-a6.css
@media print {
  /* [type="checkbox"] { */
  /*   position: relative; */
  /*   display: block; */
  /*   left: 2px; */
  /*   top: -11px; */
  /*   width: 7px; */
  /*   height: 7px; */
  /*   border-width: 1px; */
  /*   border-style: solid; */
  /*   border-color: #B3B3B3 #dcddde #dcddde #B3B3B3; */
  /*   content: ""; */
  /*   background-image: linear-gradient(135deg, #B1B6BE 0%, #FFF 100%); */
  /*   background-repeat: no-repeat; */
  /*   background-position: center; */
  /* } */

  h1 {
    text-align: center;
    font-size: 16pt;
    text-transform: uppercase;
    font-weight: black;
  }

  h2 {
    font-size: 14pt;
    text-transform: uppercase;
    font-weight: black;
  }

  body {
    font-family: "Azuro TF";
    font-weight: bold;
    font-size: 12pt;
    font-variant-numeric: tabular-nums;
  }

  ul {
    padding-left: 2ex;
  }

  ul.task-list {
    padding-left: 2em;
  }

  ul.task-list li input[type="checkbox"] {
    margin-left: -1.4em;
  }

  ul li {
    margin-bottom: 6px;
  }

  li::before {
    font-family: "Azuro TF";
    font-variant-numeric: tabular-nums;
  }

  @page {
    size: 57mm 100mm;
  }
}

